<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/UserImage"
        android:layout_height="60dp"
        android:layout_width="60dp"
        android:src="@drawable/user_image"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="650dp"
        />

    <TextView
        android:id="@+id/tv_user_name"
        android:text="@string/user_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingTop="5dp"
        android:layout_marginStart="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/UserImage"
        app:layout_constraintTop_toTopOf="@+id/UserImage"

        />

    <TextView
        android:id="@+id/PostTime"
        android:text="@string/post_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_user_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/Privacy_status"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/public_icon"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toEndOf="@+id/PostTime"
        app:layout_constraintTop_toTopOf="@+id/PostTime"
        />

    <ImageView
        android:id="@+id/three_dots"
        android:src="@drawable/three_dots"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:paddingTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_user_name"/>

    <TextView
        android:id="@+id/postCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_caption"
        android:autoLink="web"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/UserImage"
        app:layout_constraintStart_toStartOf="@+id/UserImage"
        />



    <ImageView
        android:id="@+id/post_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/post_picture"
        app:layout_constraintTop_toBottomOf="@+id/postCaption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/like_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/like_icon"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/post_image"
        app:layout_constraintStart_toStartOf="@+id/postCaption"
        />

    <TextView
        android:id="@+id/likes_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_likes"
        android:textSize="15sp"
        android:layout_marginStart="3dp"
        app:layout_constraintStart_toEndOf="@+id/like_icon"
        app:layout_constraintTop_toTopOf="@+id/like_icon"
        app:layout_constraintBottom_toBottomOf="@+id/like_icon"
        />

    <TextView
        android:id="@+id/shares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_shares"
        android:textSize="15sp"
        android:layout_marginEnd="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/like_icon"
        app:layout_constraintBottom_toBottomOf="@+id/like_icon"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userPOV"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/user_image"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/shares"
        app:layout_constraintTop_toTopOf="@+id/shares"
        app:layout_constraintBottom_toBottomOf="@+id/shares"
        />

    <ImageView
        android:id="@+id/arrow_down"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/arrow_down"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@+id/userPOV"
        app:layout_constraintTop_toTopOf="@+id/userPOV"
        app:layout_constraintBottom_toBottomOf="@+id/userPOV"
        />

    <View
        android:id="@+id/horizontalLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@+id/like_icon"
        app:layout_constraintStart_toStartOf="@+id/like_icon"
        app:layout_constraintEnd_toEndOf="@+id/arrow_down"
        />

    <ImageView
        android:id="@+id/like_icon_2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/like_icon_2"
        android:adjustViewBounds="true"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLine"
        app:layout_constraintStart_toStartOf="@+id/likes_counter"
        />

    <TextView
        android:id="@+id/like_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/like_button"
        android:textSize="15sp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/like_icon_2"
        app:layout_constraintTop_toTopOf="@+id/like_icon_2"
        app:layout_constraintBottom_toBottomOf="@+id/like_icon_2"
        />

    <ImageView
        android:id="@+id/comment_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/comment_icon"
        android:adjustViewBounds="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="35dp"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLine"
        app:layout_constraintStart_toEndOf="@+id/like_text"
        />

    <TextView
        android:id="@+id/comment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_button"
        android:textSize="15sp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/comment_icon"
        app:layout_constraintTop_toTopOf="@+id/comment_icon"
        app:layout_constraintBottom_toBottomOf="@+id/comment_icon"
        />

    <ImageView
        android:id="@+id/share_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/share_icon"
        android:adjustViewBounds="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="35dp"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLine"
        app:layout_constraintStart_toEndOf="@+id/comment_text"
        />

    <TextView
        android:id="@+id/share_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_button"
        android:textSize="15sp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/share_icon"
        app:layout_constraintTop_toTopOf="@+id/share_icon"
        app:layout_constraintBottom_toBottomOf="@+id/share_icon"
        />

</androidx.constraintlayout.widget.ConstraintLayout>